--- a/css/main.css
+++ b/css/main.css
@@ -758,8 +758,9 @@ footer p a:hover {
 }
 
 #speakers .info {
+    font-size: 14px;
     text-align: center;
-    height: 80px;
+    height: 100px;
 }
 
 #speakers .photo {
