--- a/css/main.css
+++ b/css/main.css
@@ -550,7 +550,8 @@ a:active {
 
 .sponsor .logo-box img {
     vertical-align: middle;
-    width: 100%;
+    max-width: 100%;
+    max-height: 200px;
 }
 
 #organizers .sponsor .logo-box {
