--- a/css/main.css
+++ b/css/main.css
@@ -3,13 +3,12 @@
 --*/
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: sans-serif;
     font-size: 16px!important;
     font-weight: 300;
     line-height: 25px;
     color: #3b4045;
-    font:14px/22px 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      -webkit-font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
 }
 h1,
 h2,
