--- a/css/main.css
+++ b/css/main.css
@@ -696,3 +696,25 @@ footer p a:hover {
     border-left: 8px solid transparent;
     border-top: 0;
 }
+
+#hero-area .organizer {
+    background: #fff; /* linear-gradient(180deg, #fff 0%, #eee 100%) repeat scroll 0 0; */
+    border-radius: 15px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    max-width: 300px;
+    margin: 20px auto;
+}
+
+#hero-area .organizer .logo-box img {
+    max-width: 200px;
+    display: block;
+    margin: 0 auto;
+}
+
+#hero-area hr {
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #eee;
+    margin: 20px 0;
+}
