--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ a:active {
 }
 
 .sub-heading {
-    margin-bottom: 30px;
+    margin: 20px 0 30px;
 }
 
 .sub-heading h3 {
@@ -340,7 +340,7 @@ a:active {
 #hero-area .block h1 {
   margin-bottom: 35px;
   text-transform: uppercase;
-  font-size: 40px;
+  font-size: 30px;
   letter-spacing: 4px;
   position: relative;
 }
@@ -486,7 +486,7 @@ a:active {
     subscribe start
 --*/
 
-#subscribe {
+#apply {
     padding: 70px 0px;
     background: rgba(0, 0, 0, 0) linear-gradient(160deg, #4ec684 0%, #417fab 100%) repeat scroll 0 0;
     background-repeat: no-repeat;
@@ -496,7 +496,7 @@ a:active {
     color: #fff;
 }
 
-#subscribe .block h2 {
+#apply .block h2 {
   font-size: 25px;
   margin-bottom: 10px;
   font-weight: 400;
@@ -504,7 +504,7 @@ a:active {
   text-transform: uppercase;
 }
 
-#subscribe .block input {
+#apply .block input {
     width: 40%;
     height: 45px;
     border: 0;
