--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,8 @@ a:active {
 
 .heading {
     text-align: center;
-    padding-bottom: 70px;
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 .heading h2 {
     padding-bottom: 30px;
@@ -341,8 +342,17 @@ a:active {
   margin-bottom: 35px;
   text-transform: uppercase;
   font-size: 30px;
-  letter-spacing: 4px;
+  line-height: 50px;
+  letter-spacing: 2px;
   position: relative;
+}
+#hero-area .block h1 span {
+  font-size: 60px;
+  color: #eee;
+  font-weight: 500;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  font-variant: small-caps;
 }
 #hero-area .block h1:before {
   content: "";
@@ -496,7 +506,11 @@ a:active {
     color: #fff;
 }
 
-#apply .block h2 {
+#apply .heading {
+    padding: 0
+}
+
+#apply .heading h2 {
   font-size: 25px;
   margin-bottom: 10px;
   font-weight: 400;
@@ -504,15 +518,9 @@ a:active {
   text-transform: uppercase;
 }
 
-#apply .block input {
-    width: 40%;
-    height: 45px;
-    border: 0;
-    border-radius: 0;
-    display: inline-block;
-    box-shadow: none;
-    vertical-align: middle;
-    margin: 0 10px;
+#apply .block a {
+    color: white;
+    font-weight: 700;
 }
 
 #contact {
