--- a/css/main.css
+++ b/css/main.css
@@ -703,7 +703,15 @@ footer p a:hover {
     text-align: center;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     max-width: 300px;
-    margin: 20px auto;
+    margin: -50px auto 0;
+}
+
+#hero-area .organizer h5 {
+    font-weight: 600;
+    font-size: 14pt;
+    color: #555;
+    font-variant: small-caps;
+    margin-bottom: 15px; 
 }
 
 #hero-area .organizer .logo-box img {
